--- a/index.html
+++ b/index.html
@@ -4,35 +4,75 @@
     <meta charset="utf-8">
     <title>P-L-O-M-B-E-R-I-Z</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   </head>
   <body>
+
+    <!-- header part -->
     <header>
         <figure>
           <img src="image/plomberiz.png" alt="plomberiz">
           <h1>Les tuyaux c'est notre biz.</h1>
         </figure>
     </header>
+    <!-- header part  -->
 
+    <!-- ~~~~~~~~~~~~~~~~~~~~~ -->
+
+    <!-- nav part -->
     <nav>
       <ul>
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">Tarifs</a></li>
-        <li><a href="#">Avis</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="tarifs.html">Tarifs</a></li>
+        <li><a href="avis.html">Avis</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+    <!-- nav part -->
+
+    <!-- ~~~~~~~~~~~~~~~~~~~~~ -->
+
+    <!-- section part  -->
     <section>
-      <h2>Plomberiz, les plombiers présent pour vous</h2>
-      <p>La société Plomberiz vous accueille à Roubaix et intervient sur tout le département pour votre plomberie et vos systèmes de chauffage.<br>
-        Avec plus de 15 ans d'expérience, Mr. Mario vous propose l'installation de chaudières murales ou de cumulus.<br>
-        Spécialisé dans l'installation de chaudières murales, il vous conseille et vous propose la solution adéquate pour faire des économies tout en vous assurant un confort parfait.<br>
-        Il intervient également pour le désengorgement, le détartrage ou encore pour l'installation d'alimentation de lave-linge et de lave-vaisselle.<br>
-        De plus, vous pouvez également faire appel à Plomberiz pour la pose d'adoucisseurs.<br>
-        Pour plus de renseignements, prenez contact avec Mr. Mario ou sa femme M.Peach
-      </p>
-
+      <article class="presentation">
+        <h2>Plomberiz, les plombiers présent pour vous</h2>
+        <p>La société Plomberiz vous accueille à Roubaix et intervient sur tout le département pour votre plomberie et vos systèmes de chauffage.</p>
+        <p>Avec plus de 15 ans d'expérience, Mr. Mario vous propose l'installation de chaudières murales ou de cumulus.<br>
+           Spécialisé dans l'installation de chaudières murales, il vous conseille et vous propose la solution adéquate pour faire des économies tout en vous assurant un confort parfait.</p>
+        <p>Il intervient également pour le désengorgement, le détartrage ou encore pour l'installation d'alimentation de lave-linge et de lave-vaisselle.</p>
+        <p>De plus, vous pouvez également faire appel à Plomberiz pour la pose d'adoucisseurs.<br>
+           Pour plus de renseignements, prenez contact avec Mr. Mario ou sa femme M.Peach</p>
+        </p>
+      </article>
+      <article class="galphoto">
+        <h2>Galerie photo qui fait plaisir</h2>
+        <ul>
+          <li><img src="image/douche.jpg" alt="" /></li>
+          <li><img src="image/toilette.jpg" alt="" /></li>
+          <li><img src="image/chiendouche.jpg" alt="" /></li>
+          <li><img src="image/ivan.jpg" alt="" /></li>
+       </ul>
+      </article>
     </section>
+    <!-- section part -->
 
+    <!-- ~~~~~~~~~~~~~~~~~~~~~ -->
 
+    <!-- footer part -->
+    <footer>
+      <div class="lfooter">
+        <ul>
+          <li><a href="#">Mentions légales</a></li>
+          <li><a href="#">Business</a></li>
+        </ul>
+      </div>
+      <div class="rfooter">
+        <ul>
+          <li><a href="#">Ca fait plaisir ?</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </div>
+    </footer>
+    <!-- footer part -->
   </body>
 </html>
