Finished the tarifs page

--- a/tarifs.html
+++ b/tarifs.html
@@ -35,7 +35,7 @@
     <!-- section part  -->
    <section>
      <div class="tableau">
-       <table>
+       <table class="homme">
          <caption>Tarifs Homme</caption>
          <tr>
            <th>Service</th>
@@ -55,7 +55,7 @@
          </tr>
          <tr>
            <td>WC bouchée</td>
-           <td>90€</td>
+           <td>Ton rein</td>
          </tr>
          <tr>
            <td>Douche bouché</td>
@@ -66,7 +66,7 @@
            <td>90€</td>
          </tr>
       </table>
-      <table>
+      <table class="femme">
       <caption>Tarifs Femme</caption>
        <tr>
         <th>Service</th>
@@ -74,27 +74,27 @@
       </tr>
       <tr>
         <td>Réparation de fuite d’eau</td>
-        <td>1h</td>
+        <td>Ca fait plaisir</td>
       </tr>
       <tr>
         <td>Évier bouché</td>
-        <td>1h</td>
+        <td>Ca fait plaisir</td>
       </tr>
       <tr>
         <td>Baignoire bouchée</td>
-        <td>2h</td>
+        <td>Ca fait plaisir</td>
       </tr>
       <tr>
         <td>WC bouchée</td>
-        <td>1 jour</td>
+        <td>Ca fait plaisir</td>
       </tr>
       <tr>
         <td>Douche bouché</td>
-        <td>1h</td>
+        <td>Ca fait plaisir</td>
       </tr>
       <tr>
         <td>Remplacement des joints</td>
-        <td>1h</td>
+        <td>Ca fait plaisir</td>
       </tr>
     </table>
      </div>
