Finished contact page & favicon

--- a/tarifs.html
+++ b/tarifs.html
@@ -5,6 +5,8 @@
     <title>P-L-O-M-B-E-R-I-Z</title>
     <link rel="stylesheet" href="css/tarifs.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
 
