fix tarifs.html error

--- a/tarifs.html
+++ b/tarifs.html
@@ -36,6 +36,7 @@
 
     <!-- section part  -->
    <section>
+     <h2>Nos Tarifs</h2>
      <div class="tableau">
        <table class="homme">
          <caption>Tarifs Homme</caption>
