fix contact.html error

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">    
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
 
@@ -44,8 +44,8 @@
        <input type="text" name="name" id="name" required=""/>
      </p>
      <p>
-       <label for="name">Votre prénom :</label>
-       <input type="text" name="name" id="name" required=""/>
+       <label for="firstname">Votre prénom :</label>
+       <input type="text" name="firstname" id="firstname" required=""/>
      </p>
      <p>
        <label for="email">Votre email :</label>
@@ -71,6 +71,7 @@
          <p><i class="material-icons">email</i>E-mail : <a href="mailto:grotuyau@plomberiz.fr">grotuyau@plomberiz.fr</a></p>
      </article>
      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.778177073604!2d2.246978651286496!3d48.8624401791863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e67ada5b5ac9db%3A0x4e579c1149864c2e!2sBois+de+Boulogne!5e0!3m2!1sen!2sfr!4v1489693539632" width="400" height="300" style="border:0" allowfullscreen></iframe>
+     </section>
     <!-- section part -->
 
     <!-- ~~~~~~~~~~~~~~~~~~~~~ -->
